--- a/starter/index.html
+++ b/starter/index.html
@@ -46,16 +46,15 @@
 						<div class="card-header" style="background-color:#C1CE8E;">
 							<h4 class="center"><strong>To do (<span id="to-do-tasks-count">5</span>)</strong></h4>
 						</div>
-
 						<div class="container list-group list-group-flush p-2 rounded-2"  style="background-color:#E6EEC7;" id="to-do-tasks">
 							<!-- TO DO TASKS HERE -->
 							<button class="card  d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 mb-2 cart shadow-sm" >
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-question-circle fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title "><strong> Keep all the updated requirements in one place </strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5 "><strong> Keep all the updated requirements in one place </strong></div>
 										<div class="card-subtitle mb-2 text-muted">#1 created in 2022-10-08</div>
 										<div class="card-text" title="There is hardly anything more frustrating than having to look for current requirements in tens of comments under the actual description or having to decide which commenter is actually authorized to change the requirements. The goal here is to keep all the up-to-date requirements and details in the main/primary description of a task. Even though the information in comments may affect initial criteria, just update this primary description accordingly.">There is hardly anything more frustrating than having t...</div>
 									</div>
@@ -68,11 +67,11 @@
 
 								<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 mb-2 shadow-sm">
 									<div class="">
-										<i class="bi bi-question-circle"></i>
+										<i class="bi bi-question-circle fs-3"></i>
 									</div>
 									<div class="d-flex justify-content-around align-items-center">
-										<div class="card-body">
-											<div class="card-title"><strong>Consider creating an acceptance criteria list</strong></div>
+										<div class="card-body text-start">
+											<div class="card-title fs-5"><strong>Consider creating an acceptance criteria list</strong></div>
 											<div class="card-subtitle mb-2 text-muted">#2 created in 2022-10-08</div>
 												<div class="card-text" title="Descriptive requirements are very helpful when it comes to understanding the context of a problem, yet finally it is good to precisely specify what is expected. Thus the developer will not have to look for the actual requirements in a long, descriptive text but he will be able to easily get to the essence. One might find that sometimes — when acceptance criteria are well defined — there is little or no need for any additional information. Example:
 						                a) User navigates to “/accounts” and clicks on red download CSV button
@@ -89,11 +88,11 @@
 
 								<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 mb-2 shadow-sm">
 									<div class="">
-										<i class="bi bi-question-circle"></i>
+										<i class="bi bi-question-circle fs-3"></i>
 									</div>
 									<div class="d-flex justify-content-around align-items-center">
-										<div class="card-body">
-											<div class="card-title"><strong>Provide examples, credentials, etc</strong></div>
+										<div class="card-body text-start">
+											<div class="card-title fs-5"><strong>Provide examples, credentials, etc</strong></div>
 											<div class="card-subtitle mb-2 text-muted">#3 created in 2022-10-08</div>
 											<div class="card-text" title="If the expectation is to process or generate some file — attach an example of such a file. If the goal is to integrate what is being developed with some service, ensure your devs have access to this service and its documentation. This list could go on and on — the bottom line is — if there is something that our developer might make use of, try to foresee it and provide them with (access to) it.">If the expectation is to process or generate some file ...</div>
 									</div>
@@ -106,11 +105,11 @@
 
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 mb-2 shadow-sm">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-question-circle fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Annotate</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Annotate</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#4 created in 2022-10-08</div>
 										<div class="card-text" title="The mockup provided can sometimes be confusing for developers. Especially if it contains much more content than the scope of the task described. Drop a couple of arrows, outlines and annotations here and there to emphasize what are the important parts of the mockup from the task requirements perspective.">The mockup provided can sometimes be confusing for deve...</div>
 									</div>
@@ -123,11 +122,11 @@
 
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-3 mb-2 shadow-sm">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-question-circle fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Use charts and diagrams</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Use charts and diagrams</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#5 created in 2022-10-08</div>
 										<div class="card-text" title="While it is not always necessary, sometimes it might be beneficial to prepare a flowchart, a block diagram or some other kind of concept visualization that will render it easy for the developer to comprehend the task and its scope.">While it is not always necessary, sometimes it might be...</div>
 									</div>
@@ -149,11 +148,11 @@
 							<!-- IN PROGRESS TASKS HERE -->
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2  border rounded-2  mb-2 shadow-sm">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="spinner-border spinner-border-sm text-green me-1"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Describe steps to reproduce an issue</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Describe steps to reproduce an issue</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#6 created in 2022-10-08</div>
 										<div class="card-text"title="including as many details as possible.">including as many details as possible.</div>
 									</div>
@@ -165,11 +164,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="spinner-border spinner-border-sm text-green me-1"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide access</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Provide access</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#7 created in 2022-10-08</div>
 										<div class="card-text" title="to the affected account and services if possible. It might be hard to reproduce the exact environment on a local machine.">to the affected account and services if possible. It mi...</div>
 									</div>
@@ -181,11 +180,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="spinner-border spinner-border-sm text-green me-1"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide environment information</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Provide environment information</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#8 created in 2022-10-08</div>
 										<div class="card-text" title="i.e., browser version, operating system version etc. Sometimes a list of installed browser plugins and extensions might be helpful as well.">i.e., browser version, operating system version etc. So...</div>
 									</div>
@@ -197,11 +196,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="spinner-border spinner-border-sm text-green me-1"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide a link to an exception and/or a stack trace</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Provide a link to an exception and/or a stack trace</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#9 created in 2022-10-08</div>
 										<div class="card-text" title="as investigating those is usually the first step to take in resolving the problem.">as investigating those is usually the first step to tak...</div>
 									</div>
@@ -222,11 +221,11 @@
 							<!-- DONE TASKS HERE -->
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-check2-square fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide access to logs</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Provide access to logs</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#10 created in 2022-10-08</div>
 										<div class="card-text" title="as they can be helpful in reproducing the steps that caused the problem in the first place.">as they can be helpful in reproducing the steps that ca...</div>
 									</div>
@@ -238,11 +237,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-check2-square fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide access to the affected server or database dump</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Provide access to the affected server or database dump</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#11 created in 2022-10-08</div>
 										<div class="card-text" title="If it is possible and when it does not violate security policies, it is usually helpful for the developer to access the original data that might have played a role in the problem.">If it is possible and when it does not violate security...</div>
 									</div>
@@ -254,11 +253,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-check2-square fs-3 fa-bold"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Make a screencast</strong></div>
+									<div class="card-body text-start">
+										<div class="card-title fs-5"><strong>Make a screencast</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#12 created in 2022-10-08</div>
 										<div class="card-text" title="It is not always necessary, but many times a short screencast (or at least a screenshot) says more than a thousand words. While working on MacOS you can use QuickTime Player for the purpose but there are plenty of tools available for other operating systems as well.">It is not always necessary, but many times a short scre...</div>
 									</div>
@@ -270,11 +269,11 @@
 							</button>
 							<button class="card cart d-flex flex-row justify-content-around align-items-center border-bottom border-muted p-2 border rounded-2 shadow-sm mb-2">
 								<div class="">
-									<i class="bi bi-question-circle"></i>
+									<i class="bi bi-check2-square fs-3"></i>
 								</div>
 								<div class="d-flex justify-content-around align-items-center">
-									<div class="card-body">
-										<div class="card-title"><strong>Provide contact information</strong></div>
+									<div class="card-body text-start ">
+										<div class="card-title fs-5"><strong>Provide contact information</strong></div>
 										<div class="card-subtitle mb-2 text-muted">#13 created in 2022-10-08</div>
 										<div class="card-text" title="of the person that reported the bug. This will not always be possible, but in some cases it might be advantageous and most effective if a developer can have a chat with a person that actually experienced the bug, especially if the steps to reproduce a problem are not deterministic.">of the person that reported the bug. This will not alwa...</div>
 									</div>
