--- a/starter/index.html
+++ b/starter/index.html
@@ -23,11 +23,11 @@
 		<!-- BEGIN #content -->
 		<div id="content" class="app-content main-style">
 
-			<div class="d-flex justify-content-between p-4">
+			<div class="d-flex flex-wrap justify-content-between p-4">
 				<div>
 					<ol class="d-flex list-unstyled">
-						<li class=""><a href="javascript:;">Home</a>/</li>
-						<li class="">Scrum Board </li>
+						<li class="fs-4"><a href="javascript:;">Home</a>/</li>
+						<li class="fs-4">Scrum Board </li>
 					</ol>
 					<!-- BEGIN page-header -->
 					<h1 class="page-header">
@@ -37,8 +37,61 @@
 				</div>
 				
 				<div class="">
-					<button class="btn btnb text-white p-2 rounded-4 "><i class=""></i> Add Task</a>
+					<button type="button" class="btn high text-white p-2 rounded-4 " data-toggle="modal" data-target="#exampleModal"><i class="bi bi-plus"></i> Add Task</button>
+					<div class="modal fade shadow-sm" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+						  <div class="modal-content">
+							<div class="modal-header high">
+							  <h5 class="modal-title" id="exampleModalLabel">Add task</h5>
+							  <button type="button" class="close high" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							  </button>
+							</div>
+							<div class="modal-body modal_body">
+							  <form action="" class="d-block fw-bold">
+								<label for="titre" class="d-block">titre:</label>
+								<input class="form-control input-sm m-1 cart shadow-sm" type="text" name="titre" id="titre" required>
+							  </br>
+								<label for="type" class="d-block">type:</label>
+								<div class="form-check">
+								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="type" value="1" selected>
+								<label class="form-check-label">high</label>
+							    </div>
+							    <div class="form-check">
+								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="type" value="2">
+								<label class="form-check-label">feature</label>
+							    </div>
+							</br>
+								<label for="propriete" class="d-block">propriete:</label>
+								<select class="form-select form-select-sm m-1 cart shadow-sm" name="propriete" id="propriete" >
+									<option value="1" selected>----please select----</option>
+									<option value="2"></option>
+									<option value="3"></option>
+								</select>
+							</br>
+								<label for="status" class="d-block">status:</label>
+								<select class="form-select form-select-sm m-1 cart shadow-sm" name="status" id="status" required>
+									<option value="1" selected>----please select----</option>
+									<option value="2"></option>
+									<option value="3"></option>
+								</select>
+							</br>
+								<label for="date" class="d-block" >date:</label>
+								<input  class="form-control input-sm m-1 cart shadow-sm" type="date" name="date" id="date">
+							</br>
+								<label for="description" class="d-block" >description:</label>
+								<textarea class="form-control m-1 cart shadow-sm" id="description" name="description" rows="5" cols="33">description...</textarea>
+							  </form>
+							</div>
+							<div class="modal-footer modal_body">
+							  <button type="button" class="btn bug shadow-sm" data-dismiss="modal">Close</button>
+							  <button type="button" class="btn high shadow-sm">Save changes</button>
+							</div>
+						  </div>
+						</div>
+					  </div>
 				</div>
+				
 			</div>
 			
 			<div class="d-flex flex-wrap justify-content-around  ">
@@ -304,6 +357,9 @@
 	<!-- ================== BEGIN core-js ================== -->
 	<script src="assets/js/vendor.min.js"></script>
 	<script src="assets/js/app.min.js"></script>
+    <!-- Popper.js, then Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<!-- ================== END core-js ================== -->
 </body>
 </html>
