--- a/starter/index.html
+++ b/starter/index.html
@@ -48,7 +48,7 @@
 							  </button>
 							</div>
 							<div class="modal-body modal_body">
-							  <form action="" class="d-block fw-bold">
+							  <form action="" id="first" class="d-block fw-bold">
 								<label for="titre" class="d-block">titre:</label>
 								<input class="form-control input-sm m-1 cart shadow-sm" type="text" name="titre" id="titre" required>
 							  </br>
@@ -81,17 +81,17 @@
 							</br>
 								<label for="description" class="d-block" >description:</label>
 								<textarea class="form-control m-1 cart shadow-sm" id="description" name="description" rows="5" cols="33">description...</textarea>
+								<div class="modal-footer modal_body">
+									<button type="button" class="btn bug shadow-sm" data-dismiss="modal">Close</button>
+									<button type="submit" class="btn high shadow-sm">Save changes</button>
+								  </div>
 							  </form>
 							</div>
-							<div class="modal-footer modal_body">
-							  <button type="button" class="btn bug shadow-sm" data-dismiss="modal">Close</button>
-							  <button type="button" class="btn high shadow-sm">Save changes</button>
-							</div>
+
 						  </div>
 						</div>
 					  </div>
 				</div>
-				
 			</div>
 			
 			<div class="d-flex flex-wrap justify-content-around  ">
@@ -357,6 +357,7 @@
 	<!-- ================== BEGIN core-js ================== -->
 	<script src="assets/js/vendor.min.js"></script>
 	<script src="assets/js/app.min.js"></script>
+	<script src="assets/js/data.js"></script>
     <!-- Popper.js, then Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
