--- a/starter/index.html
+++ b/starter/index.html
@@ -73,9 +73,9 @@
 								<label for="status" class="d-block">status:</label>
 								<select class="form-select form-select-sm m-1 cart shadow-sm" name="status" id="status" required>
 									<option value="1" selected>----please select----</option>
-									<option value="to do">to do</option>
-									<option value="in Progress">in progress</option>
-									<option value="done">done</option>
+									<option value="To Do">to do</option>
+									<option value="In Progress">in progress</option>
+									<option value="Done">done</option>
 								</select>
 							</br>
 								<label for="date" class="d-block" >date:</label>
@@ -99,8 +99,8 @@
 			<div class="d-flex flex-wrap justify-content-around  ">
 				<div class="container-fluid mt-5 col-lg-4 col-md-6">
 						<div class="card-header" style="background-color:#C1CE8E;">
-							<h4 class="center"><strong>To do </strong></h4>
-							<!-- (<span id="to-do-tasks-count">5</span>) -->
+							<h4 class="center"><strong>To do  (<span id="to-do-tasks-count">5</span>)</strong></h4>
+							<!--  -->
 						</div>
 						<div class="container list-group list-group-flush p-2 rounded-2"  style="background-color:#E6EEC7;" id="to-do-tasks">
 							<!-- TO DO TASKS HERE -->
@@ -271,8 +271,8 @@
 
 					<div class="container-fluid mt-5 col-lg-4 col-md-6">
 						<div class="card-header" style="background-color:#DFE8CC;">
-							<h4 class="center"> <strong> Done  </strong></h4>
-							(<span id="done-tasks-count">4</span>)
+							<h4 class="center"> <strong> Done (<span id="done-tasks-count">4</span>) </strong></h4>
+							
 						</div>
 						<div class="contenaire container list-group list-group-flush p-2 rounded-2" id="done-tasks" style="background-color:#E9ECE1;">
 							<!-- DONE TASKS HERE -->
