--- a/starter/index.html
+++ b/starter/index.html
@@ -38,7 +38,7 @@
 				
 				<div class="">
 					<button type="button" class="btn high text-white p-2 rounded-4 " data-toggle="modal" data-target="#Modal"><i class="bi bi-plus"></i> Add Task</button>
-					<div class="modal fade shadow-sm" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+					<div class="modal shadow-sm" id="Modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
 						<div class="modal-dialog" role="document">
 						  <div class="modal-content">
 							<div class="modal-header high">
@@ -54,20 +54,20 @@
 							  </br>
 								<label for="type" class="d-block">type:</label>
 								<div class="form-check">
-								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="type" value="feature" selected>
+								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="feature" value="feature" selected>
 								<label class="form-check-label">high</label>
 							    </div>
 							    <div class="form-check">
-								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="type" value="bug">
+								<input class="form-check-input mx-2 cart shadow-sm" type="radio" name="type" id="bug" value="bug">
 								<label class="form-check-label">feature</label>
 							    </div>
 							</br>
 								<label for="propriete" class="d-block">propriete:</label>
 								<select class="form-select form-select-sm m-1 cart shadow-sm" name="priority" id="priority" >
 									<option value="1" selected>----please select----</option>
-									<option value="high">high</option>
-									<option value="medium">medium</option>
-									<option value="simple">simple</option>
+									<option value="High">high</option>
+									<option value="Medium">medium</option>
+									<option value="Easy">simple</option>
 								</select>
 							</br>
 								<label for="status" class="d-block">status:</label>
@@ -85,7 +85,7 @@
 								<textarea class="form-control m-1 cart shadow-sm" id="description" name="description" rows="5" cols="33">description...</textarea>
 								<div class="modal-footer modal_body">
 									<button type="button" class="btn bug shadow-sm" data-dismiss="modal">Close</button>
-									<button type="submit" class="btn high shadow-sm">Save changes</button>
+									<button type="submit" id="hide" class="btn high shadow-sm" >Save changes</button>
 								  </div>
 							  </form>
 							</div>
@@ -99,7 +99,7 @@
 			<div class="d-flex flex-wrap justify-content-around  ">
 				<div class="container-fluid mt-5 col-lg-4 col-md-6">
 						<div class="card-header" style="background-color:#C1CE8E;">
-							<h4 class="center"><strong>To do  (<span id="to-do-tasks-count">5</span>)</strong></h4>
+							<h4 class="center"><strong>To do  (<span id="to-do-tasks-count"></span>)</strong></h4>
 							<!--  -->
 						</div>
 						<div class="container list-group list-group-flush p-2 rounded-2"  style="background-color:#E6EEC7;" id="to-do-tasks">
@@ -198,7 +198,7 @@
 
 					<div class="container-fluid mt-5 col-lg-4 col-md-6 ">
 						<div class="card-header" style="background-color:#DBE3B5;">
-							<h4 class="center"><strong>In Progress (<span id="in-progress-tasks-count">4</span>)</strong></h4>
+							<h4 class="center"><strong>In Progress (<span id="in-progress-tasks-count"></span>)</strong></h4>
 						</div>
 						<div class="contenaire container list-group list-group-flush p-2 rounded-2 border" id="in-progress-tasks" style="background-color:#E7EADA;">
 							<!-- IN PROGRESS TASKS HERE -->
@@ -271,7 +271,7 @@
 
 					<div class="container-fluid mt-5 col-lg-4 col-md-6">
 						<div class="card-header" style="background-color:#DFE8CC;">
-							<h4 class="center"> <strong> Done (<span id="done-tasks-count">4</span>) </strong></h4>
+							<h4 class="center"> <strong> Done (<span id="done-tasks-count"></span>) </strong></h4>
 							
 						</div>
 						<div class="contenaire container list-group list-group-flush p-2 rounded-2" id="done-tasks" style="background-color:#E9ECE1;">
